nscmr/static/sass/style.scss
/* ... */
#user-cep-address {
  margin-bottom: 28px;
  input {
    @media screen and (min-width: 320px) {
      width: 30%;
    }
    @media screen and (min-width: 480px) {
      width: 20%;
    }
    @media screen and (min-width: 992px) {
      width: 15%;
    }
  }
}

.duvet-btn-wrapper {
  margin-top: 17px;
  width: 100%;
  .align-fix {
    line-height: normal !important;
  }
  .duvet-btn {
    &.no-margin {
      margin-left: 0 !important;
    }
    &:last-child {
      margin-left: 15px;
    }
    @extend .pointer;
    padding: 15px 30px 15px 30px;
    @include align-vertical(50px);
    text-align: center;
    background-color: $light-blue;
    color: white !important;
    text-transform: lowercase;
    border: 0;
    border-radius: 25px;
    &:hover {
      background-color: $light-grey;
    }
    &:active {
      background-color: $fade-dark;
    }
    &.disabled {
      background-color: $fade-dark;
      cursor: not-allowed;
      &:hover { background-color: $fade-dark; }
    }
  }
}

#checkout-options {
  @extend .text-center;
  a {
    @extend .capitalize;
    &:not(:last-child) { margin-right: 30px; }
    &:not(.selected) { 
      color: $fade-dark;
      &:hover { color: $dark; }
    }
  }
}

#brand-selectors {
  margin-bottom: 20px;
  .card-brand {
    @extend .capitalize;
    border: 2px solid $dark;
    padding: 5px 10px 5px 10px;
    font-size: 1.5em !important;
    &:not(:last-child) { margin-right: 20px; }
    &:hover { background-color: $light-grey; }
    &:active { background-color: $fade-dark; }
    &.selected { background-color: $light-grey; }
  }
}

.buy-info {
  margin-top: 20px;
}

/*
 * contact/custommade page
 */

.field-row {
  .input input {
    width: 15%;
    display: inline;
  }
  .input,
  .field,
  .contact-field {
    @media screen and (min-width: 480px) {
      float: left;
      width: 50%;
      &:first-child {
        padding-right: 15px;
      }
      &:last-child {
        padding-left: 15px;
      }
    }
  }
}


#returns,
#custom-made,
#contact,
#single-content-wrapper{
  #message {
    height: 280px;
  }
  textarea,
  input {
    margin-bottom: 20px;
  }
  hr {
    border-top: 1px solid $dark;
  }
}

/*
 * about/wash
 */

#wash,
#about {
  h3 {
    padding-top: 20px;
  }
  margin-bottom: 80px;
  text-align: justify;
}


/*
 * institucional / newsletter & social media stuff
 */

ul#info {
  display: inline-block;
  text-align: center;
  width: 100%;
  margin: 0;
  color: $grey;
  li {
    float: left;
    width: 20%;
    & a:hover {
      color: $dark-grey;
    }
  }
}

div#connect {
  text-align: center;
  width: 100%;
  height: 100px;
  span {
    .duvet-input,
    p {
      text-align: left;
      font-weight: lighter;
      font-size: .8em;
      width: 100%;
      color: $light-red;
    }
    .duvet-input {
      text-align: right;
      a {
        text-align: center;
      }
      input {
        border: 1px solid $light-grey;
        font-style: italic;
        color: $light-grey;
      }
    }
    padding: 10px 15px 10px 15px;
    height: 110px;
    @media screen and (min-width: 320px) {
      display: block;
      width: 100%;
    }
    @media screen and (min-width: 768px) {
      display: inline-block;
      width: 35%;
    }
    a {
      i {
        width: 30px;
        @include align-vertical(30px);
        border: 1px solid $dark;
        border-radius: 50%;
        &:hover {
          color: $grey;
          border-color: $grey;
        }
      }
      &:first-child {
        margin-right: 5px;
      }
      &:last-child {
        margin-left: 5px;
      }
      & {
        text-decoration: none !important;
        color: $dark;
      }
    }
  }
}


/*
 * footer
 */

#footer-wrapper {
  background-color: $light;
  color: $dark;
  width: 100%;
  height: 120px;
  position: relative;
  .engine {
    font-size: 0.7em;
    position: absolute;
    right: 15px;
    bottom: 0;
  }
  @media screen and (min-width: 320px) {
    margin-top: 50px;
  }
  @media screen and (min-width: 768px) {
    margin-top: 0;
  }
}

footer {
  height: 100%;
}

